// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxl childWrap auto 1`] = `
<div
  className="sc-jAaTju fiApCr"
  data-name="Boxl"
>
  <div
    className="sc-jDwBTQ hkTPWS"
    data-name="BoxlChild"
  >
    <div>
      1
    </div>
  </div>
  <div
    className="sc-jDwBTQ hkTPWS"
    data-name="BoxlChild"
  >
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`boxl childWrap even 1`] = `
<div
  className="sc-iRbamj knnsep"
  data-name="Boxl"
>
  <div
    className="sc-jlyJG eDCHix"
    data-name="BoxlChild"
  >
    <div>
      1
    </div>
  </div>
  <div
    className="sc-jlyJG eDCHix"
    data-name="BoxlChild"
  >
    <div>
      2
    </div>
  </div>
  <div
    className="sc-jlyJG kwSobm"
    data-name="BoxlChild"
  />
  <div
    className="sc-jlyJG kwSobm"
    data-name="BoxlChild"
  />
</div>
`;

exports[`boxl direction default 1`] = `
<div
  className="sc-kEYyzF gdxGEn"
  data-name="Boxl"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;

exports[`boxl direction horizontal 1`] = `
<div
  className="sc-jWBwVP kzeDgk"
  data-name="Boxl"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;

exports[`boxl direction vertical 1`] = `
<div
  className="sc-hSdWYo hmUyiD"
  data-name="Boxl"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;

exports[`boxl edge-case handles null child in children array 1`] = `
<div
  className="sc-chPdSV LgyEa"
  data-name="Boxl"
/>
`;

exports[`boxl edge-case naked text node is not wrapped when spacing undefined 1`] = `
<div
  className="sc-kpOJdX fROgiC"
  data-name="Boxl"
>
  <div>
    1
  </div>
  2
  <div>
    3
  </div>
</div>
`;

exports[`boxl edge-case naked text node is wrapped when spacing defined 1`] = `
<div
  className="sc-ckVGcZ ckgXKJ"
  data-name="Boxl"
>
  <div
    className="sc-jKJlTe gylQvj"
    data-name="BoxlChildren"
  >
    <div
      className="sc-eNQAEJ iAIntP"
      data-name="BoxlChild"
    >
      <div>
        1
      </div>
    </div>
    <div
      className="sc-eNQAEJ iAIntP"
      data-name="BoxlChild"
    >
      2
    </div>
    <div
      className="sc-eNQAEJ iAIntP"
      data-name="BoxlChild"
    >
      <div>
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`boxl structure renders correct structure when no spacing 1`] = `
<div
  className="sc-bwzfXH RkOMy"
  data-name="Boxl"
>
  Text
</div>
`;

exports[`boxl structure renders correct structure when spacing AND children length > 1 1`] = `
<div
  className="sc-bZQynM hmYzAv"
  data-name="Boxl"
>
  <div
    className="sc-gzVnrw gviVII"
    data-name="BoxlChildren"
  >
    <div
      className="sc-htoDjs dCMzwX"
      data-name="BoxlChild"
    >
      <div>
        Text 1
      </div>
    </div>
    <div
      className="sc-htoDjs dCMzwX"
      data-name="BoxlChild"
    >
      <div>
        Text 2
      </div>
    </div>
  </div>
</div>
`;

exports[`boxl structure renders correct structure when spacing AND children length > 1 and children are Boxl 1`] = `
<div
  className="sc-dnqmqq ilEALG"
  data-name="Boxl"
>
  <div
    className="sc-iwsKbI fdOaWl"
    data-name="BoxlChildren"
  >
    <div
      className="sc-gZMcBi bLlThd"
      data-name="BoxlChild"
    >
      <div
        className="sc-VigVT faYjXQ"
        data-name="Boxl"
      >
        Text 1
      </div>
    </div>
    <div
      className="sc-gZMcBi bLlThd"
      data-name="BoxlChild"
    >
      <div
        className="sc-jzJRlG hXlUWV"
        data-name="Boxl"
      >
        Text 2
      </div>
    </div>
  </div>
</div>
`;

exports[`boxl structure renders correct structure when spacing BUT children length === 1 1`] = `
<div
  className="sc-ifAKCX gZjnqQ"
  data-name="Boxl"
>
  Text
</div>
`;

exports[`rerender maintains element instance between renders 1`] = `
<input
  class="sc-hzDkRC mzrWx"
  data-name="Boxl"
  placeholder="test1"
  value="My password is PASSWORD"
/>
`;

exports[`rerender maintains element instance between renders 2`] = `
<input
  class="sc-fMiknA kqBRb"
  data-name="Boxl"
  placeholder="test2"
  value="My password is PASSWORD"
/>
`;
